# nima-learns

./: .gitignore  LICENSE  README.md  pyproject.toml
ai-agents-crash-course/: pyproject.toml
ai-agents-crash-course/scripts/: s1_data_ingestion.py  s2_data_chunking.py
src/git_grok/: __init__.py
src/git_grok/ingestion/: splitting.py
src/repo_sage/ingestion/: vector_engine.py
tests/: conftest.py
tests/test_ingestion/: test_splitting.py  test_splitting_integration.py  test_vector_engine.py
